--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,6 @@ libs = ["lib"]
 
 remappings = ["@openzeppelin=lib/openzeppelin-contracts/"]
 
+fs_permissions = [{access="read", path="./images/"}]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
